Put youtube embed

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ and, <em>yes</em>, upload images to the device's displays.</p>
 handling and graceful termination. That means that frequent reboots of the various
 services are required, to get your system in a stable and predictable state.</p>
 
+<h2>Small showoff</h2>
+<iframe width="480" height="360" src="http://www.youtube-nocookie.com/embed/yJNg-mZQh4E?rel=0" frameborder="0" allowfullscreen></iframe>
+
 <p>Patches and pull-requests are always welcome, of course =).</p>
 
 <h2>Other hardware controllers</h2>
