Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Macchina : My experiments on reverse-engineering the Native Instruments Maschine hardware controller" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Macchina by biappi</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Macchina</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Macchina</h1>
+        <p>My experiments on reverse-engineering the Native Instruments Maschine hardware controller</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/biappi/Macchina">View on GitHub</a>
+        <p class="view"><a href="https://github.com/biappi/Macchina">View the Project on GitHub <small>biappi/Macchina</small></a></p>
 
-          <h1 id="project_title">Macchina</h1>
-          <h2 id="project_tagline">My experiments on reverse-engineering the Native Instruments Maschine hardware controller</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/biappi/Macchina/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/biappi/Macchina/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/biappi/Macchina/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/biappi/Macchina/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/biappi/Macchina">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <p>This is my experimentation about reverse engineering the Native Instruments Maschine.</p>
 
 <p>The Maschine is a combination of a rhythm oriented software sampler, and a custom USB
@@ -52,9 +49,6 @@ and, <em>yes</em>, upload images to the device's displays.</p>
 handling and graceful termination. That means that frequent reboots of the various
 services are required, to get your system in a stable and predictable state.</p>
 
-<h2>Small showoff</h2>
-<iframe width="480" height="360" src="http://www.youtube-nocookie.com/embed/yJNg-mZQh4E?rel=0" frameborder="0" allowfullscreen></iframe>
-
 <p>Patches and pull-requests are always welcome, of course =).</p>
 
 <h2>Other hardware controllers</h2>
@@ -64,6 +58,11 @@ that a lot of this work can be used to support any other Native Instruments hard
 the required modifications.</p>
 
 <p>If you want, you can send me your favorite controller and I'll try to make it work ;).</p>
+
+<h2>Small showoff</h2>
+
+
+
 
 <h2>Organization of the project</h2>
 
@@ -161,16 +160,12 @@ bothered with my tinkering with my stuff developed by you, just send me a friend
 
 <p>Life is short to deal with litigations.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Macchina maintained by <a href="https://github.com/biappi">biappi</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/biappi">biappi</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -181,7 +176,6 @@ bothered with my tinkering with my stuff developed by you, just send me a friend
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
