--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@ the required modifications.</p>
 
 <h2>Small showoff</h2>
 
-
-
+<iframe width="480" height="360" src="http://www.youtube-nocookie.com/embed/yJNg-mZQh4E?rel=0" frameborder="0" allowfullscreen></iframe>
 
 <h2>Organization of the project</h2>
 
@@ -98,11 +97,13 @@ didn't fry up, but I have just some knowledge of what I am doing.</p>
 <li>
 <p>Make sure NIHardwareAgent is running</p>
 
-<p>Selena:~ willy$ ps ax | grep NIHardwareAgent
+<p><code>
+Selena:~ willy$ ps ax | grep NIHardwareAgent
 13487 s001  U      0:01.24 /Library/Application Support/Native
 Instruments/Hardware/NIHardwareAgent.app/Contents/MacOS/NIHardwareAgent
 13491 s001  R+     0:00.00 grep NIHardwareAgent
-Selena:~ willy$ </p>
+Selena:~ willy$
+</code></p>
 </li>
 <li><p>Run the target</p></li>
 <li><p>Close anything that might use your Maschine</p></li>
